--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   }
   .product:hover {
     box-shadow: var(--shadow);
-    border: solid 1px green ;
+    border: solid 1px green;
   }
   .product .btn {
     transition: transform 0.5s, opacity 0.5s;
@@ -49,14 +49,16 @@
   .font-sm {
     font-size: 14px;
   }
-  .btn{
-    @apply  text-white bg-green-700 hover:bg-green-800 focus:ring-4 disabled:bg-green-300 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-green-800
-   
+  .btn {
+    @apply text-white bg-green-700 hover:bg-green-800 focus:ring-4 disabled:bg-green-300 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 focus:outline-none dark:focus:ring-green-800;
   }
-  .row{
-    @apply flex flex-wrap
+  .row {
+    @apply flex flex-wrap;
   }
 }
-.slick-slider .slick-list{
-    color: #0aad0a;
+.slick-slider .slick-list {
+  color: #0aad0a;
+}
+.btn-red {
+  @apply text-white bg-red-700 hover:bg-red-800 focus:ring-4 disabled:bg-red-300 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 focus:outline-none dark:focus:ring-red-800;
 }
