--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   }
   .product:hover {
     box-shadow: var(--shadow);
-    border: solid 1px green;
+    /* border: solid  1px rgba(0, 0, 0, 0.5);  */
   }
   .product .btn {
     transition: transform 0.5s, opacity 0.5s;
@@ -61,4 +61,9 @@
 }
 .btn-red {
   @apply text-white bg-red-700 hover:bg-red-800 focus:ring-4 disabled:bg-red-300 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 focus:outline-none dark:focus:ring-red-800;
+}
+.layer{
+  position: absolute;
+  top: 0;left: 0;right: 0;
+  background-color: #0aad0a;
 }
